SCR #446366 - fix: change font size of modal titles on mobile

--- a/src/modules/games/components/provider-links/styles/themes/_default.scss
+++ b/src/modules/games/components/provider-links/styles/themes/_default.scss
@@ -78,7 +78,6 @@
         &__wrapper {
             @include bm.get-mq-map('grid-template-columns', $themeDefault, 'wrapperTemplateColumns');
             @include bm.get-mq-map('gap', $themeDefault, 'wrapperGap');
-            @include bm.get-mq-map('margin', $themeDefault, 'wrapperMargin');
             display: grid;
         }
 
